example_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example
  name: example-service-nodeport
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30001
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: example
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
