example_manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: example
  namespace: default

spec:
  rules:
  - host: example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service-nodeport
            port: 
              number: 8080
